  * Dh_Lib.pm: Implement subroutines to facility file removal and
    symlink creation without a fork+exec.
  * Dh_Lib: Avoid a fork+exec for rm -f and ln -s.
  * dh_compress: Ditto.
  * dh_installman: Ditto.
  * dh_clean: Avoid a fork+exec for rm -f.
  * dh_installdeb: Ditto.
  * dh_makeshlibs: Ditto.
  * dh_md5sums: Ditto.
  * dh_installdocs: Avoid a fork+exec for ln -s.
  * dh_strip: Ditto.

 -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000

debhelper (10.5) unstable; urgency=medium

  * Upload to unstable.  (Closes: #865363)

  [ Niels Thykier ]
  * dh_installman: Remove unncessary "chown" call that made things a
    lot slower.  Thanks to Kurt Roeckx for reporting it.
  * dh_installman: Fix wrong permission of man pages (set 0755 instead
    of 0644).  Regression introduced in 10.2.2.
  * dh_installman: Batch chmod calls to reduce the overhead for
    packages with many manpages.
  * dh: Undo an unsafe optimisation that caused "-indep" and "-arch"
    override targets to be ignored.  Thanks to Gianfranco Costamagna
    for reporting it and Iain Lane for tracing it to the commit
    that introduced the issue.  (Closes: #863887)
  * dh_clean, dh_prep: Bulk delete most files and directories, which
    gives a noticeable speed up for source packages building many
    binary packages.
  * dh_shlibdeps: Avoid creating debian/<pkg>/DEBIAN directory if it
    is not needed.
  * Dh_Lib.pm: Fix typo in error message.
  * Dh_Lib.pm: Rewrite install_* to use File::Copy to avoid the
    overhead of a fork+exec per file.  For simplicity, the verbose
    output still claim debhelper uses "install -p -m <mode>" for this.
  * Dh_Lib.pm: Replace most of the fork+exec calls to mv for simple
    file renames.
  * Dh_Lib.pm: Add sub to make common dh_* tools do their thing in
    parallel with very little coding effort.  This parallel support
    accounts for DEB_BUILD_OPTIONS to set the upper limit.