@@ -16,6 +16,8 @@ debhelper (10.5.1) UNRELEASED; urgency=medium
   * dh_md5sums: Ditto.
   * dh_installdocs: Avoid a fork+exec for ln -s.
   * dh_strip: Ditto.
+  * Dh_Lib: Avoid 1-2 stat calls in make_symlink by reusing existing
+    stat calls.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 25 Jun 2017 18:02:30 +0000
 
